--- a/test-output/index.html
+++ b/test-output/index.html
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,12 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.tests.TestExample" class="method navigator-link" hash-for-method="successCreatePost">successCreatePost</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.tests.TestExample" class="method navigator-link" hash-for-method="successGetPost">successGetPost</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.tests.TestExample" class="method navigator-link" hash-for-method="invalidRequestMethodDelete">invalidRequestMethodDelete</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -131,16 +126,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="successCreatePost">
-                  </a> <!-- successCreatePost -->
-                  <span class="method-name">successCreatePost</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="successGetPost">
-                  </a> <!-- successGetPost -->
-                  <span class="method-name">successGetPost</span>
+                  <a name="invalidRequestMethodDelete">
+                  </a> <!-- invalidRequestMethodDelete -->
+                  <span class="method-name">invalidRequestMethodDelete</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -148,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/74/76lyp2y96pdccrtt7ynxxsj80000gn/T/testng-eclipse-341923875/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/74/76lyp2y96pdccrtt7ynxxsj80000gn/T/testng-eclipse-880385101/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -157,7 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.tests.TestExample&quot;/&gt;
+      &lt;class name=&quot;com.tests.TestExample&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;invalidRequestMethodDelete&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- com.tests.TestExample --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -197,20 +189,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'successCreatePost')
+data.setCell(0, 1, 'invalidRequestMethodDelete')
 data.setCell(0, 2, 'com.tests.TestExample')
-data.setCell(0, 3, 2459);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'successGetPost')
-data.setCell(1, 2, 'com.tests.TestExample')
-data.setCell(1, 3, 1246);
+data.setCell(0, 3, 1818);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -225,9 +213,22 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">4 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.tests.TestExample</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">invalidRequestMethodPut</span>
+                <br/>
+                <span class="ignored-method-name">successGetPost</span>
+                <br/>
+                <span class="ignored-method-name">successCreatePost</span>
+                <br/>
+                <span class="ignored-method-name">invalidRequestMethodPatch</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -238,12 +239,8 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.tests.TestExample</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">successCreatePost</span>
+                <span class="method-name">invalidRequestMethodDelete</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">successGetPost</span>
-                <span class="method-start">2462 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
