--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,14 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">4.640</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">1.095</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">com.tests.TestExample</td><td><a href="#m0">invalidRequestMethodDelete</a></td><td rowspan="1">1722357684240</td><td rowspan="1">1334</td></tr><tr class="passedeven"><td><a href="#m1">invalidRequestMethodPatch</a></td><td rowspan="1">1722357685576</td><td rowspan="1">1018</td></tr><tr class="passedeven"><td><a href="#m2">invalidRequestMethodPut</a></td><td rowspan="1">1722357686597</td><td rowspan="1">999</td></tr><tr class="passedeven"><td><a href="#m3">successCreatePost</a></td><td rowspan="1">1722357687598</td><td rowspan="1">999</td></tr><tr class="passedeven"><td><a href="#m4">successGetPost</a></td><td rowspan="1">1722357688598</td><td rowspan="1">263</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.tests.TestExample</td><td><a href="#m0">getUserNotFound</a></td><td rowspan="1">1722359116392</td><td rowspan="1">1075</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.tests.TestExample#invalidRequestMethodDelete</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.tests.TestExample#invalidRequestMethodPatch</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.tests.TestExample#invalidRequestMethodPut</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.tests.TestExample#successCreatePost</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.tests.TestExample#successGetPost</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.tests.TestExample#getUserNotFound</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
